# moodle-sync

./: .gitignore  PROJECT.md  README.md  audit_moodle_sync_and_submissions.py  browser_scraper.py  check_new.py  daily_sync.py  get_ai_cw.py  moodle_sync.py  notion_helper.py  pyproject.toml  scrape_comp1008.py  scrape_comp1008_v2.py  scrape_deadlines.py
moodle_sync/: __init__.py  chunking.py  cli.py  config.py  db.py  embeddings.py  extract.py  indexer.py  search.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_extract.py  test_index_search.py
